--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -127,13 +127,7 @@
                 Salary
               </dt>
               <dd class="course-parts__fields__value">
-                @courseEnrichment?.Salary.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Financial support you offer (optional)
-              </dt>
-              <dd class="course-parts__fields__value">
-                @courseEnrichment?.FinancialSupport.DisplayText()
+                @courseEnrichment?.SalaryDetails.DisplayText()
               </dd>
             </dl>
           </div>
