--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -1,7 +1,7 @@
 @model OrganisationViewModel
 
 @{
-  Layout = "Shared/_TabViewLayout";
+  Layout = "Shared/_OrganisationDetailsViewLayout";
   ViewBag.Title = Model.TabViewModel.OrganisationName;
   var train_with_us = ViewData.ModelState["TrainWithUs"] != null && ViewData.ModelState["TrainWithUs"].Errors.Any();
   var about_training_provider = ViewData.ModelState["AboutTrainingProvider"] != null && ViewData.ModelState["AboutTrainingProvider"].Errors.Any();
@@ -20,7 +20,7 @@
         <p class="govuk-body">This is your chance to tell applicants why they should choose to train with you. You could describe any advantages and special
         features of you as a training provider.</p>
         <p class="govuk-body">You must be specific and factual with any claims you make, and support them with evidence. For example:</p>
-        <ul>
+        <ul class="govuk-list govuk-list--bullet">
           <li>don’t say “our students are some of the happiest in the country”</li>
           <li> do say “the Times Educational Supplement ranked our students as 4th happiest in the country”</li>
         </ul>
@@ -79,7 +79,7 @@
           <input type="submit" class="govuk-button" value="Save" />
         </div>
         <div class="form-group">
-          <a href="@Url.Action("About", "Organisation")" class="govuk-link">Cancel changes</a>
+          <p class="govuk-body"><a href="@Url.Action("About", "Organisation")" class="govuk-link">Cancel changes</a></p>
         </div>
       </form>
     </div>
