--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -1,28 +1,31 @@
 ﻿@model CourseListViewModel
 
 @{
-  Layout = "Shared/_TabViewLayout";
+  Layout = "Shared/_OrganisationDetailsViewLayout";
   ViewBag.Title = Model.InstitutionName;
 }
 
-<section class="govuk-tabs__panel--without-border">
-  <h2 class="govuk-heading-l">Check your courses</h2>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body">
-        Check that your course information is correct. If there are any problems, you should <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20problem">contact the Becoming a Teacher team</a> to let us know.
-      </p>
-      <p class="govuk-body">
-        To make any changes, for now you’ll still need to use UCAS web-link. Changes on UCAS will normally show here within one working day.
-      </p>
-      <p class="govuk-body">
-        Soon you’ll be able to add extra content to tell applicants more about you and your courses. <a href="https://afdebatmanageui.blob.core.windows.net/public-assets/How%20to%20prepare%20the%20rest%20of%20your%20course%20information.pdf">Find out more about this here</a>.
-      </p>
-      <p class="govuk-body">
-        In the future, you’ll be able to edit all course information here.
-      </p>
-    </div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-l">Step 1. About your organisation</h2>
+    <p class="govuk-body">Your organisation information and contact details will show on every course. They are edited and published separately from course information.</p>
+    <p class="govuk-body">You need to complete your organisation fields and publish them.</p>
+    <p class="govuk-body"><a class="govuk-link" href="@Url.Action("About", "Organisation")">Fill-in your organisation information</a></p>
   </div>
+</div>
+
+<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-l">Step 2. Course details</h2>
+    <h3 class="govuk-heading-m">Preview and publish courses</h3>
+    <p class="govuk-body">You must complete and publish each course. You should preview your course to see how it will look to applicants before you publish.</p>
+    <p class="govuk-body">Your course information will not be seen by applicants until you have published it.</p>
+    <h3 class="govuk-heading-m">Copying content between courses</h3>
+    <p class="govuk-body">Once you’ve completed a single course you can use a ‘copy course’ feature to duplicate information in other courses.</p>
+  </div>
+</div>
 
   @foreach (var provider in Model.Providers)
   {
@@ -60,3 +63,13 @@
     </table>
   }
 </section>
+
+<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-l">Request access for someone</h2>
+    <p class="govuk-body">You can request a DfE Sign-in account for others who manage your courses.</p>
+    <p class="govuk-body"><a class="govuk-link" href="@Url.Action("RequestAccess", "Organisation")">Request access for someone else</a></p>
+  </div>
+</div>
