--- a/src/ui/Views/Course/Preview.cshtml
+++ b/src/ui/Views/Course/Preview.cshtml
@@ -1,11 +1,8 @@
-@model CourseReferenceViewModel
+@model GovUk.Education.SearchAndCompare.UI.Shared.ViewModels.CourseDetailsViewModel
+
  @{
   Layout = "_Layout";
 }
 
 <!-- CourseDetails is a dependency from SearchAndCompareUi.Shared -->
-@await Component.InvokeAsync("CourseDetails", new { 
-  providerCode = Model.InstCode,
-  courseCode = Model.CourseCode,
-  preview = true,
-  aboutYourOrgLink = Url.Action("About", "Organisation", new { ucasCode = Model.InstCode }) })
+@await Component.InvokeAsync("CourseDetails", new { course = Model })
