--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -6,12 +6,13 @@
   var link = "mailto:becomingateacher@digital.education.gov.uk?subject=Problem%20with%20course%20" + Model.Course.ProgrammeCode;
 
   var courseEnrichment = Model.CourseEnrichment;
+  var routeData = courseEnrichment.RouteData;
 }
 
 <a href="@Url.Action("Courses", "Organisation", new {ucasCode = Model.Course.UcasCode})" class="govuk-back-link">Back</a>
 
-@Html.Partial("~/Views/Shared/_Alerts.cshtml")
-@Html.Partial("Shared/ErrorSummary.cshtml")
+@await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
+@await Html.PartialAsync("Shared/ErrorSummaryCourseOverview.cshtml")
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   <h1 class="govuk-heading-xl">
@@ -96,114 +97,12 @@
 
       @if(Model.Course.StatusAsEnum != CourseVariantStatus.NotRunning)
       {
-        <div class="course-parts__item">
-          <h3 class="course-parts__title">About this course</h3>
-          <a class="course-parts__action" href="@Url.Action("About", "Course", Model.RouteData)">Edit</a>
-          <dl class="course-parts__fields">
-            <dt class="course-parts__fields__label" id="section-AboutCourse">
-                About this course
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.AboutCourse) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.AboutCourse.DisplayText()
-            </dd>
-            <dt class="course-parts__fields__label" id="section-InterviewProcess">
-              Interview process (optional)
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.InterviewProcess) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.InterviewProcess.DisplayText()
-            </dd>
-            <dt class="course-parts__fields__label" id="section-HowSchoolPlacementsWork">
-              How school placements work
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.HowSchoolPlacementsWork) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.HowSchoolPlacementsWork.DisplayText()
-            </dd>
-          </dl>
-        </div>
+        @await Html.PartialAsync("shared/_AboutCourseOverview", Model.CourseEnrichment)
 
-        @if (@Model.IsSalary) {
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">Course length and salary</h3>
-            <a class="course-parts__action" href="@Url.Action("Salary", "Course", Model.RouteData)">Edit</a>
-            <dl class="course-parts__fields">
-              <dt class="course-parts__fields__label">
-                Course length
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.CourseLength.ToString()) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.CourseLength.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Salary
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.SalaryDetails) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.SalaryDetails.DisplayText()
-              </dd>
-            </dl>
-          </div>
-        } else {
-          <div class="course-parts__item">
-            <h3 class="course-parts__title">Course length and fees</h3>
-            <a class="course-parts__action" href="@Url.Action("Fees", "Course", Model.RouteData)">Edit</a>
-            <dl class="course-parts__fields">
-              <dt class="course-parts__fields__label">
-                Course length
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.CourseLength.ToString()) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.CourseLength.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee for UK and EU students
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FeeUkEu.ToString()) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.FeeUkEu.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee for international students (optional)
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FeeInternational.ToString()) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.FeeInternational.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Fee details (optional)
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FeeDetails) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.FeeDetails.DisplayText()
-              </dd>
-              <dt class="course-parts__fields__label">
-                Financial support you offer (optional)
-              </dt>
-              <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FinancialSupport) ? "course-parts__fields__value--empty" : "")">
-                @courseEnrichment?.FinancialSupport.DisplayText()
-              </dd>
-            </dl>
-          </div>
-        }
+        var partialName = Model.IsSalary ? "shared/_SalaryBasedCourseOverview" : "shared/_FeeBasedCourseOverview";
+        @await Html.PartialAsync(partialName, Model.CourseEnrichment)
 
-        <div class="course-parts__item">
-          <h3 class="course-parts__title">Requirements and eligbility</h3>
-          <a class="course-parts__action" href="@Url.Action("Requirements", "Course", Model.RouteData)">Edit</a>
-          <dl class="course-parts__fields">
-            <dt class="course-parts__fields__label" id="section-Qualifications">
-              Qualifications needed
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.Qualifications) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.Qualifications.DisplayText()
-            </dd>
-            <dt class="course-parts__fields__label" id="section-PersonalQualities">
-              Personal qualities (optional)
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.OtherRequirements) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.PersonalQualities.DisplayText()
-            </dd>
-            <dt class="course-parts__fields__label"id="section-OtherRequirements">
-              Other requirements (optional)
-            </dt>
-            <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.OtherRequirements) ? "course-parts__fields__value--empty" : "")">
-              @courseEnrichment?.OtherRequirements.DisplayText()
-            </dd>
-          </dl>
-        </div>
-
+        @await Html.PartialAsync("shared/_RequirementsCourseOverview", Model.CourseEnrichment)
       }
 
         <div class="course-parts__item">
