hide Course enrichment and publish workflow when course is not running

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -87,6 +87,8 @@
           </dl>
         </div>
 
+      @if(Model.Course.StatusAsEnum != CourseVariantStatus.NotRunning)
+      {
         <div class="course-parts__item">
           <h3 class="course-parts__title">About this course</h3>
           <a class="course-parts__action" href="@Url.Action("About", "Course", Model.RouteData)">Edit</a>
@@ -194,6 +196,8 @@
             </dd>
           </dl>
         </div>
+      
+      }
 
         <div class="course-parts__item">
           <h3 class="course-parts__title">Training locations</h3>
@@ -224,7 +228,8 @@
     </div>
 
     <div class="govuk-grid-column-one-third">
-
+    @if(Model.Course.StatusAsEnum != CourseVariantStatus.NotRunning)
+    {
       <aside class="related">
         @switch(courseEnrichment.DeterminePublicationState())
         {
@@ -291,6 +296,7 @@
           <p class="govuk-body"><a href="@Model.LiveSearchUrl">View on website</a></p>
         }
       </aside>
+    }
     </div>
   </div>
 </main>
