--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -89,6 +89,7 @@
         @switch(workflowStatus)
         {
           case WorkflowStatus.Blank :
+            <strong class="govuk-tag govuk-tag--blank">Empty</strong>
             <p class="govuk-body">You need to complete and publish this information.</p>
 
             <hr class="related__section-break">
@@ -101,6 +102,7 @@
             </form>
             break;
           case WorkflowStatus.InitialDraft :
+            <strong class="govuk-tag govuk-tag--draft">Draft</strong>
             <p class="govuk-body">You have unpublished changes.</p>
 
             <hr class="related__section-break">
@@ -114,11 +116,13 @@
             </form>
             break;
           case WorkflowStatus.Published :
+            <strong class="govuk-tag govuk-tag--published">Published</strong>
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">Applicants will see this on all your courses from October.</p>
 
             break;
           case WorkflowStatus.SubsequentDraft :
+            <strong class="govuk-tag govuk-tag--draft">Draft</strong>
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
 
@@ -133,6 +137,7 @@
             </form>
             break;
           case WorkflowStatus.BlankSubsequentDraft :
+            <strong class="govuk-tag govuk-tag--draft">Empty</strong>
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
 
