Add details about previewing organisation info
The way of previewing org info is quite contrived. Before we make a better org preview feature, indicate to users how they can see their org info before publishing.

--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -92,22 +92,31 @@
             <strong class="govuk-tag govuk-tag--blank">Empty</strong>
             <p class="govuk-body">You need to complete and publish this information.</p>
 
+            <hr class="related__section-break" />
+            <h4 class="govuk-heading-m">Preview</h4>
+            <p class="govuk-body">This information will show on all your courses.</p>
+            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
-            <p class="govuk-body">New information will show on all @Model.TabViewModel.OrganisationName courses.</p>
+            <p class="govuk-body">Applicants will see published information from October.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="submit" class="govuk-button" value="Publish" />
-              <input type="hidden" asp-for="@Model.PublishOrganisation" value="true"></input>
+              <input type="hidden" asp-for="@Model.PublishOrganisation" value="true" />
             </form>
             break;
           case WorkflowStatus.InitialDraft :
             <strong class="govuk-tag govuk-tag--draft">Draft</strong>
             <p class="govuk-body">You have unpublished changes.</p>
 
+            <hr class="related__section-break" />
+            <h4 class="govuk-heading-m">Preview</h4>
+            <p class="govuk-body">This information will show on all your courses.</p>
+            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
             <p class="govuk-body">Applicants will see published information from October.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
@@ -117,8 +126,8 @@
             break;
           case WorkflowStatus.Published :
             <strong class="govuk-tag govuk-tag--published">Published</strong>
-            <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">Applicants will see this on all your courses from October.</p>
+            <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
 
             break;
           case WorkflowStatus.SubsequentDraft :
@@ -126,9 +135,13 @@
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
 
+            <hr class="related__section-break" />
+            <h4 class="govuk-heading-m">Preview</h4>
+            <p class="govuk-body">This information will show on all your courses.</p>
+            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
-            <p class="govuk-body">This information will show on all your courses.</p>
             <p class="govuk-body">Applicants will see published information from October.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
@@ -141,9 +154,14 @@
             <p class="govuk-body">Last published on @Model.LastPublishedTimestampUtc.DateString()</p>
             <p class="govuk-body">You have unpublished changes.</p>
 
+            <hr class="related__section-break" />
+            <h4 class="govuk-heading-m">Preview</h4>
+            <p class="govuk-body">This information will show on all your courses.</p>
+            <p class="govuk-body">Preview any course to see how it will look to applicants.</p>
+
             <hr class="related__section-break">
             <h4 class="govuk-heading-m">Publish</h4>
-            <p class="govuk-body">New information will show on all @Model.TabViewModel.OrganisationName courses.</p>
+            <p class="govuk-body">Applicants will see published information from October.</p>
 
             <form asp-controller="Organisation" asp-action="about" method="post">
               <input type="hidden" asp-for="@Model.PublishOrganisation" value="true" />
