--- a/src/ui/Views/Shared/_Alerts.cshtml
+++ b/src/ui/Views/Shared/_Alerts.cshtml
@@ -12,7 +12,7 @@
     @if (body != null)
     {
       <div class="govuk-@type-summary__body">
-        <p clas="govuk-body">@Html.Raw(body)</p>
+        @Html.Raw(body)
       </div>
     }
   </div>
