fix inline margins for publish tags

--- a/src/ui/Views/Course/Requirements.cshtml
+++ b/src/ui/Views/Course/Requirements.cshtml
@@ -62,6 +62,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <aside class="related">
+        @Html.Partial("CopyCourseContent")
         @Html.Partial("FormattingAdvice")
       </aside>
     </div>
