--- a/src/ui/Views/Course/Fees.cshtml
+++ b/src/ui/Views/Course/Fees.cshtml
@@ -108,6 +108,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <aside class="related">
+        @Html.Partial("CopyCourseContent")
         @Html.Partial("FormattingAdvice")
       </aside>
     </div>
