--- a/src/ui/Views/Course/Salary.cshtml
+++ b/src/ui/Views/Course/Salary.cshtml
@@ -67,6 +67,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <aside class="related">
+        @Html.Partial("CopyCourseContent")
         @Html.Partial("FormattingAdvice")
       </aside>
     </div>
