--- a/src/ui/Assets/Styles/patterns/_course-parts.scss
+++ b/src/ui/Assets/Styles/patterns/_course-parts.scss
@@ -36,7 +36,20 @@
 
     &__label {
       @include govuk-font($size: 19, $weight: bold);
-      @include govuk-responsive-margin(1, "bottom");
+      @include govuk-responsive-padding(1, "bottom");
+
+      &--error {
+        color: $govuk-error-colour;
+        border-left: 5px solid $govuk-error-colour;
+        padding-bottom: 0;
+        padding-left: govuk-spacing(2);
+        padding-top: govuk-spacing(1);
+
+        + .course-parts__fields__value {
+          border-left: 5px solid $govuk-error-colour;
+          padding-left: govuk-spacing(2);
+        }
+      }
     }
 
     &__value {
@@ -57,5 +70,12 @@
         color: $govuk-secondary-text-colour;
       }
     }
+  }
+
+  &-error-message {
+    @include govuk-responsive-margin(1, "bottom");
+    color: $govuk-link-colour;
+    display: block;
+    text-decoration: underline;
   }
 }
