--- a/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
@@ -4,18 +4,19 @@
   var courseEnrichment = Model;
   var routeData = Model.RouteData;
   var about_course = ViewData.ModelState["AboutCourse"] != null && ViewData.ModelState["AboutCourse"].Errors.Any();
+  var url = Url.Action("About", "Course", routeData);
 }
 
 <div class="course-parts__item">
   <h3 class="course-parts__title">About this course</h3>
-  <a class="course-parts__action" href="@Url.Action("About", "Course", routeData)">Edit</a>
+  <a class="course-parts__action" href="@url">Edit</a>
   <dl class="course-parts__fields">
     <dt class="course-parts__fields__label @(about_course ? "course-parts__fields__label--error" : "")" id="section-AboutCourse">
         About this course
     </dt>
     <dd asp-for="AboutCourse" class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.AboutCourse) ? "course-parts__fields__value--empty" : "")">
         @if (about_course) {
-          <span asp-validation-for="AboutCourse" class="course-parts-error-message"></span>
+          <a href="@url#AboutCourse-wrapper"><span class="govuk-error-message" asp-validation-for="AboutCourse" ></span></a>
         }
         @courseEnrichment?.AboutCourse.DisplayText()
     </dd>
