Added validation for fees overview

--- a/src/ui/Assets/Styles/patterns/_course-parts.scss
+++ b/src/ui/Assets/Styles/patterns/_course-parts.scss
@@ -69,13 +69,11 @@
       &--empty {
         color: $govuk-secondary-text-colour;
       }
-    }
-  }
 
-  &-error-message {
-    @include govuk-responsive-margin(1, "bottom");
-    color: $govuk-link-colour;
-    display: block;
-    text-decoration: underline;
+      .govuk-link {
+        display: block;
+        margin-bottom: govuk-spacing(1);
+      }
+    }
   }
 }
