--- a/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
@@ -3,40 +3,63 @@
 @{
   var courseEnrichment = Model;
   var routeData = Model.RouteData;
+
+  var url = Url.Action("Fees", "Course", routeData);
+
+  var course_length = ViewData.ModelState["CourseLength"] != null && ViewData.ModelState["CourseLength"].Errors.Any();
+  var fee_uk_eu = ViewData.ModelState["FeeUkEu"] != null && ViewData.ModelState["FeeUkEu"].Errors.Any();
+  var fee_iternational = ViewData.ModelState["FeeInternational"] != null && ViewData.ModelState["FeeInternational"].Errors.Any();
+  var fee_details = ViewData.ModelState["FeeDetails"] != null && ViewData.ModelState["FeeDetails"].Errors.Any();
+  var financial_support = ViewData.ModelState["FinancialSupport"] != null && ViewData.ModelState["FinancialSupport"].Errors.Any();
 }
 
   <div class="course-parts__item">
     <h3 class="course-parts__title">Course length and fees</h3>
-    <a class="course-parts__action" href="@Url.Action("Fees", "Course", routeData)">Edit</a>
+    <a class="course-parts__action" href="@url">Edit</a>
     <dl class="course-parts__fields">
-      <dt class="course-parts__fields__label">
+      <dt class="course-parts__fields__label @(course_length ? "course-parts__fields__label--error" : "")">
         Course length
       </dt>
       <dd class="course-parts__fields__value @(courseEnrichment.CourseLength == null ? "course-parts__fields__value--empty" : "")">
+        @if (course_length) {
+          <a href="@url#CourseLength-wrapper" class="govuk-link"><span asp-validation-for="CourseLength" ></span></a>
+        }
         @courseEnrichment?.CourseLength.DisplayText()
       </dd>
-      <dt class="course-parts__fields__label">
+      <dt class="course-parts__fields__label @(fee_uk_eu ? "course-parts__fields__label--error" : "")">
         Fee for UK and EU students
       </dt>
       <dd class="course-parts__fields__value @(courseEnrichment.FeeUkEu == null ? "course-parts__fields__value--empty" : "")">
+        @if (fee_uk_eu) {
+          <a href="@url#FeeUkEu-wrapper" class="govuk-link"><span asp-validation-for="FeeUkEu" ></span></a>
+        }
         @courseEnrichment?.FeeUkEu.DisplayText()
       </dd>
-      <dt class="course-parts__fields__label">
+      <dt class="course-parts__fields__label @(fee_iternational ? "course-parts__fields__label--error" : "")">
         Fee for international students (optional)
       </dt>
       <dd class="course-parts__fields__value @(courseEnrichment.FeeInternational == null ? "course-parts__fields__value--empty" : "")">
+        @if (fee_iternational) {
+          <a href="@url#FeeInternational-wrapper" class="govuk-link"><span asp-validation-for="FeeInternational" ></span></a>
+        }
         @courseEnrichment?.FeeInternational.DisplayText()
       </dd>
-      <dt class="course-parts__fields__label">
+      <dt class="course-parts__fields__label @(fee_details ? "course-parts__fields__label--error" : "")">
         Fee details (optional)
       </dt>
       <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FeeDetails) ? "course-parts__fields__value--empty" : "")">
+        @if (fee_iternational) {
+          <a href="@url#FeeDetails-wrapper" class="govuk-link"><span asp-validation-for="FeeDetails" ></span></a>
+        }
         @courseEnrichment?.FeeDetails.DisplayText()
       </dd>
-      <dt class="course-parts__fields__label">
+      <dt class="course-parts__fields__label @(financial_support ? "course-parts__fields__label--error" : "")">
         Financial support you offer (optional)
       </dt>
       <dd class="course-parts__fields__value @(string.IsNullOrWhiteSpace(courseEnrichment.FinancialSupport) ? "course-parts__fields__value--empty" : "")">
+        @if (fee_iternational) {
+          <a href="@url#FinancialSupport-wrapper" class="govuk-link"><span asp-validation-for="FinancialSupport" ></span></a>
+        }
         @courseEnrichment?.FinancialSupport.DisplayText()
       </dd>
     </dl>
