hide course enrichment access behind FEATURE_COURSE_PREVIEW flag

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -87,7 +87,7 @@
           </dl>
         </div>
 
-      @if(Model.Course.StatusAsEnum != CourseVariantStatus.NotRunning)
+      @if(Model.AllowPreview && Model.Course.StatusAsEnum != CourseVariantStatus.NotRunning)
       {
         <div class="course-parts__item">
           <h3 class="course-parts__title">About this course</h3>
