thats not how you spell colour

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -53,7 +53,7 @@ $govuk-global-styles: true;
 // custom table header border tickness
 .govuk-table__header {
   border-bottom-width: 2px;
-  border-bottom-color: govuk-color("black");
+  border-bottom-color: govuk-colour("black");
 }
 
 // Custom styles for courses data table
